make url image loader handle forge's UnionPath nonsense correctly and also handle more image types via sbtimage